<resources>
    <string name="app_name">My Pet Care</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="repeat_pass">Repeat Password</string>
    <string name="titleDesc">Application Title</string>
    <string name="fieldImage">Image of the current Field</string>
    <string name="differentPasswords">Passwords do not match</string>
    <string name="shortPassword">Password is too short</string>
    <string name="weakPassword">Password is too weak</string>
    <string name="emptyField">This field cannot be empty</string>
    <string name="navigation_my_pets">My Pets</string>
    <string name="navigation_pets_community">Pet\'s community</string>
    <string name="navigation_my_walks">My walks</string>
    <string name="navigation_near_establishments">Near establishments</string>
    <string name="navigation_calendar">Calendar</string>
    <string name="navigation_achievements">Achievements</string>
    <string name="navigation_settings">Settings</string>
    <string name="defaultName">John Doe</string>
    <string name="defaultEmail">johndoe@gmail.com</string>
    <string name="breed_title">Breed</string>
    <string name="birth_date_title">Age(years)</string>
    <string name="gender_title">Gender</string>
    <string name="birth_title">Birth</string>
    <string name="weight_title">Weight(kg)</string>
    <string name="patologies_title">Pathologies</string>
    <string name="recommended_kcal_title">Recommended Kcal</string>
    <string name="wash_title">Wash Frequency(days)</string>
    <string name="weight_random">15</string>
    <string name="birth_random">dd/mm/yyyy</string>
    <string name="patologies_random">None</string>
    <string name="Recommended_kcal_random">747</string>
    <string name="breed_random">Golden Retriever</string>
    <string name="name_random">Firulais</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="age_random">4</string>
    <string name="wash_random">30</string>
    <string name="not_implemented">This functionality is not implemented</string>
    <string name="log_out">LOG OUT</string>
    <string name="languages">Languages</string>
    <string name="change_password">Change Password</string>
    <string name="change_username">Change Username</string>
    <string name="current_version">Version: 2.0.3</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="apply_change">Apply Change</string>
    <string name="english">English</string>
    <string name="catalan">Català</string>
    <string name="spanish">Español</string>
    <string-array name="Languages">
        <item>@string/english</item>
        <item>@string/catalan</item>
        <item>@string/spanish</item>
    </string-array>
    <string name="input_pet_name">Name</string>
    <string name="input_gender">Gender</string>
    <string name="input_birth_date">Birth date</string>
    <string name="input_breed">Breed</string>
    <string name="input_weight">Weight (kg)</string>
    <string name="input_recommended_calories">Recommended calories (kcal)</string>
    <string name="input_wash_frequency">Wash frequency (days)</string>
    <string name="input_pathologies">Pathologies</string>
    <string name="select_birth_date">Select birth date</string>
    <string name="register_new_pet">Register new pet</string>
    <string name="error_empty_field">All fields must be filled (pathologies not included)</string>
    <string name="error_pet_already_existing">The pet already belongs to you</string>
    <string name="error_user_not_owner">The pet does not belong to the user</string>
    <string name="update_pet">Update Pet</string>
    <string name="type_of_pet">Type of pet</string>
    <string name="delete_pet_image_title">Delete pet image</string>
    <string name="delete_pet_image_text">Are you sure you want to delete the profile image of your pet?</string>
    <string name="affirmative_response">Yes</string>
    <string name="negative_response">No</string>
    <string name="delete_pet">Delete pet</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_email">Change email</string>
    <string name="save_email">Save new email</string>
    <string name="save_username">Save new username</string>
    <string name="cancel">Cancel</string>
    <string name="user_confirm">Are you sure?</string>
    <string name="delete_account_db">Delete Account of the Database</string>
    <string name="ok">Ok</string>
    <string name="uninplemented"> is not implemented yet</string>
    <string name="calendar_select_date">Select date</string>
    <string name="add_personal_event_button">Personal</string>
    <string name="add_periodic_event_button">Periodic</string>
    <string name="user_profile_image">My profile image</string>
    <string name="dialog_new_event">New personal event</string>
    <string name="dialog_new_event_message">Enter the event description, its time and select the pet that will participate.</string>
    <string name="reasonText">reasonText</string>
    <string name="timeText">timeText</string>
    <string name="spinnerText">spinnerText</string>
    <string name="create">Create</string>
    <string name="add_a_pet">Add a pet</string>
    <string name="incorrect_entry">Incorrect entry</string>
    <string name="description">Description</string>
    <string name="default_hour">12:00:00</string>
    <string name="delete_event">Delete this event</string>
    <string name="confirmation">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_description">Not introduced description</string>
    <string name="choose_statistic">Choose the statistic to display</string>
    <string name="health_weight">Weight</string>
    <string name="health_recommended_daily_kilocalories">Daily kilocalories</string>
    <string name="health_exercise_frequency">Exercise frequency</string>
    <string name="health_weekly_exercice">Weekly exercise</string>
    <string name="health_weekly_kilocalories_average">Weekly kilocalories</string>
    <string name="health_wash_frequency">Wash frequency</string>
    <string name="change_statistic">Change statistic</string>
    <string name="add_new_statistic">Add statistic</string>
    <string name="previous">Newer</string>
    <string name="next">Older</string>
    <string name="add_weight">Add weight</string>
    <string name="add_wash_frequency">Add wash frequency</string>
    <string name="auto_calculated">Auto calculate</string>
    <string name="add_not_implemented">Wait for update</string>
    <string name="stub_statistic">Stub statistic</string>
    <string name="add_weight_message">Add the new weight and select the date</string>
    <string name="add_weight_hint">Weight (kg)</string>
    <string name="add_weight_date_hint"> Select the weight date</string>
    <string name="delete_weight">Delete weight</string>
    <string name="weight_deleted">Weight deleted</string>
    <string name="back_to_return_or_outside">Press back or outside to close</string>
    <string name="accept">Accept</string>
    <string name="add_wash_frequency_message">Add the new wash frequency and select the date</string>
    <string name="add_wash_frequency_hint">Wash frequency (days)</string>
    <string name="add_wash_frequency_date_hint">Select the wash frequency date</string>
    <string name="delete_wash_frequency">Delete wash frequency</string>
    <string name="meals_interval_switch">Show only last week meals</string>
    <string name="wash_interval_switch">Show only last week washes</string>
    <string name="add_meal_button">Add meal</string>
    <string name="add_wash_button">Add wash</string>
    <string name="add_vaccinations_button">Add vaccination</string>
    <string name="select_vaccination_date">Select vaccination date</string>
    <string name="delete_current_vaccination">Delete vaccination</string>
    <string name="vaccination_time">Vaccination Time</string>
    <string name="vaccination_date">Vaccination Date</string>
    <string name="vaccination_description">Vaccination description</string>
    <string name="add_illnesses_button">Add illness</string>
    <string name="meal_name">Meal Name</string>
    <string name="meal_kcal">Meal Kilocalories</string>
    <string name="meal_date">Meal Date</string>
    <string name="meal_time">Meal Time</string>
    <string name="wash_name">Wash Description</string>
    <string name="wash_duration">Wash Duration</string>
    <string name="wash_date">Wash Date</string>
    <string name="wash_time">Wash Time</string>
    <string name="update_meal">Update meal</string>
    <string name="delete_current_meal">Delete meal</string>
    <string name="update_wash">Update wash</string>
    <string name="delete_current_wash">Delete wash</string>
    <string name="empty_fields">Fields cannot be empty</string>
    <string name="meal">Meal:</string>
    <string name="wash">Wash:</string>
    <string name="from_date">From:</string>
    <string name="notificationid">NOTIFICATION_ID</string>
    <string name="selectPet">Select pet</string>
    <string name="selectPeriodicity">Select periodicity</string>
    <string name="periodic_notification_title">Periodic notification</string>
    <string name="two_weeks">Every 2 weeks</string>
    <string name="one_week">Every week</string>
    <string name="one_day">Every day</string>
    <string name="one_month">Every 30 days</string>
    <string name="three_months">Every 90 days</string>
    <string name="dialog_new_periodic_message">
        Enter the event description, its periodicity, its time and select the pet that will participate.
    </string>
    <string name="text">text</string>
    <string name="title">title</string>
    <string name="notificationChannelName">NOTIFICATION_CHANNEL_NAME</string>
    <string name="repeatedUsername">Repeated username</string>
    <string name="search_group_name">Group name</string>
    <string name="search_group_tag">Group tags (with commas)</string>
    <string name="search">Groups search</string>
    <string name="search_type">Search</string>
    <string name="search_group_name_menu">Name</string>
    <string name="search_group_tag_menu">Tag</string>
    <string name="group_already_created">Group already existing</string>
    <string name="tag_not_valid">Tags can only contain letters, numbers and commas</string>
    <string name="empty_field">The search field cannot be empty</string>
    <string name="no_search_results">No results</string>
    <string name="group_not_found">Group not found</string>
    <string name="add_new_group_title">Add a new group</string>
    <string name="add_new_group_description">Choose a name for the group, the description (optional) and enter
        the tags
    </string>
    <string name="non_empty_field">This field cannot be empty</string>
    <string name="add_description">Group description (optional)</string>
    <string name="add_group_tag">Group tags (with commas, optional)</string>
    <string name="delete_group_title">Delete group</string>
    <string name="post_report">Report post</string>
    <string name="report_reason_sexual_content">Sexual content</string>
    <string name="report_reason_violent_or_repulsive_content">Violent or repulsive content</string>
    <string name="report_reason_abusive_or_hate_content">Hateful or abusive content</string>
    <string name="report_reason_spam_or_misleading_content">Spam or misleading content</string>
    <string name="report_reason_infringe_my_rights">Infringe my rights</string>
    <string name="report_reason_other">Other</string>
</resources>