<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp">

    <RadioGroup
        android:id="@+id/reportButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_reason_sexual_content"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_reason_violent_or_repulsive_content"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_reason_abusive_or_hate_content"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_reason_spam_or_misleading_content"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_reason_infringe_my_rights"/>

        <RadioButton
            android:id="@+id/otherReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_reason_other"/>

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/otherMessage"
            style="@style/inputPetField"
            android:hint="@string/report_reason_other"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmReportPost"
        style="@style/rounded_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/post_report"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:icon="@drawable/icon_flag"
        app:iconSize="24dp"
        app:iconTint="@color/white" />

</LinearLayout>
