<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".activities.fragments.InfoPetFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <org.pesmypetcare.mypetcare.activities.views.CircularImageView
            android:id="@+id/imgPet"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="7dp"
            android:src="@drawable/perrito" />

        <TextView
            android:id="@+id/PetName"
            style="@style/TextAppearance.Compat.Notification.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:gravity="center"
            android:text="@string/name_random"
            android:textColor="@color/xatBoxColor"
            android:textSize="40sp" />

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/breed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/breed_title"
            app:hintEnabled="true"
            app:startIconContentDescription="@string/breed_title"
            app:hintAnimationEnabled="true"
            app:boxStrokeColor = "@color/colorAccent" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/breed_random"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age_title"
            app:boxBackgroundColor="#FFFFFF"
            app:errorEnabled="false"
            app:helperText="years"
            app:helperTextEnabled="true"
            app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Body1"
            app:helperTextTextColor="@color/colorAccent"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:startIconContentDescription="@string/breed_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age_random" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender_title"
            app:helperTextEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:startIconContentDescription="@string/breed_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender_random" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Weihgt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_title"
            app:helperTextEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:startIconContentDescription="@string/breed_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight_random" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birth_title"
            app:hintEnabled="true"
            app:startIconContentDescription="@string/birth_title"
            app:startIconDrawable="@drawable/baseline_cake_black_18dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birth_random"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/RecommendedKcal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recommended_kcal_title"
            app:helperTextEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:startIconContentDescription="@string/breed_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Recommended_kcal_random" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Patologies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patologies_title"
            app:helperTextEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:startIconContentDescription="@string/breed_title">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patologies_random" />

        </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            </ScrollView>


        </LinearLayout>
