<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.fragments.settings.SettingsMenuFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/languages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/languages"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/languageSelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="top"
                android:textSize="18sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/changeUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/change_username"
            android:textColorHint="@color/colorPrimary"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/colorAccent"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/changeUsernameButton"
                style="@style/rounded_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/save_username"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/changeEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/change_email"
            android:textColorHint="@color/colorPrimary"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/colorAccent"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/changeEmailButton"
                style="@style/rounded_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/save_email"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/changePasswordButton"
            style="@style/rounded_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/change_password"
            android:textColor="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/logoutButton"
            style="@style/rounded_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/log_out"
            android:textColor="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/deleteAccountButton"
            style="@style/rounded_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:backgroundTint="@color/red"
            android:text="@string/delete_account"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/current_version"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>
</FrameLayout>
