<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="15dp"
    android:layout_marginRight="10dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.fragments.SignUpFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/usernameImg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/user_icon"
            android:contentDescription="@string/fieldImage" />

        <EditText
            android:id="@+id/usernameText"
            style="@style/loginFields"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:autofillHints="@string/username" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/mailImg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/mail_icon"
            android:contentDescription="@string/fieldImage" />

        <EditText
            android:id="@+id/emailText"
            style="@style/loginFields"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/email" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/passwdImg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/password_icon"
            android:contentDescription="@string/fieldImage" />

        <EditText
            android:id="@+id/passwdText"
            style="@style/loginFields"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:autofillHints="@string/pass" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/repeatPasswdImg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/solid_password_icon"
            android:contentDescription="@string/fieldImage" />

        <EditText
            android:id="@+id/repeatPasswdText"
            style="@style/loginFields"
            android:hint="@string/repeat_pass"
            android:inputType="textPassword"
            android:autofillHints="@string/repeat_pass" />

    </LinearLayout>

    <Space
        android:layout_width="1dp"
        android:layout_height="85dp" />

    <Button
        android:id="@+id/signupButton"
        style="@style/loginButton"
        android:text="@string/sign_up" />

</LinearLayout>
